# DesktopQuotes

./: AUTHORS  README.md  meson.build
data/: Application.css  com.github.neomahler.desktopquotes.appdata.xml  com.github.neomahler.desktopquotes.desktop  com.github.neomahler.desktopquotes.gresource.xml  com.github.neomahler.desktopquotes.gschema.xml
src/: Application.vala  Content.vala  MainWindow.vala
